deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opstool
  labels:
    name: opstool
